  specific securityName.
- SNMP credentials management reworked to separate userName from securityName
  in snmpCommunityEntry and usmUserEntry tables. Changes made to addV1System(),
  addV3User() functions as well as to their oneliner's wrappers. 
- The contextEngineId parameter of config.addV3User() and auth.UsmUserData()
  renamed into securityEngineId as it's semantically correct
- Oneliner transport target classes now support the getTransportInfo()
  method that returns network addresses used on protocol level.
- The SnmpV3MessageProcessingModel.getPeerEngineInfo() method is implemented
  to communicate discovered peer SNMP engine information to SNMP apps what
  can be used for fine usmUserTable configuration.
- AsynNotificationOriginator.cfgCmdGen() does not take into account
  securityModel & securityLevel when reducing LCD access via addTrapUser().
  This improves LCD consistency on sparse add/del operatons but also
  does not let you to configure different securityModels per securityname
  at VACM though the cfgCmdGen() wrapper.
- Fix and significant logic rework of snmpCommunityTable to make it working
  in both Generator and Responder modes and better follow RFC2576 
  requirements on sequential entries lookup and selection. As a side effect,
  untagged snmpCommunityTable entries will *not* match tagged 
  snmpTargetAddrTable entries and vice versa.
- Fix to Twisted-based NotificationOriginator to make it serving INFORMs again.
- Fix to rfc2576.v1tov2() logic: errorStatus = noSuchName is now translated
  into rfc1905.noSuchObject exception value for *all* var-bindings. Although
  this is not mentioned in RFC, it looks as a more consistent approach.
- Fix of rounding error to base I/O dispatcher's next timer call calculation.
- Explicit twisted dispatcher's timer resolution (of 1 sec) removed to make
  use of global default of 0.5 sec.
- Fix to twisted/udp non-default local endpoint binding features. Common