@@ -43,6 +43,8 @@ Revision 4.2.5rc2
   addV3User() functions as well as to their oneliner's wrappers. 
 - The contextEngineId parameter of config.addV3User() and auth.UsmUserData()
   renamed into securityEngineId as it's semantically correct
+- Oneliner UsmUserData() and CommunityData() classes now support clone()'ing
+  to facilitate authentication data management in user applications.
 - Oneliner transport target classes now support the getTransportInfo()
   method that returns network addresses used on protocol level.
 - The SnmpV3MessageProcessingModel.getPeerEngineInfo() method is implemented
